# reisfmt

./: CMakeLists.txt  README.md  flake.nix  shell.nix
.github/workflows/: cmake.yml
include/: fmt.hh  fmt_collections.hh  spec.hh  to_string.hh  writeable.hh
lib/: fmt.hh
tests/: CMakeLists.txt  main.cc
